# rerecast

./: Cargo.toml  changelog.md  editor.png.REMOVED.git-id  readme.md
.github/workflows/: ci.yml
assets/test/: navmesh.nav
assets/test/chainboom/: compact_heightfield_eroded.json.REMOVED.git-id  compact_heightfield_initial.json.REMOVED.git-id  compact_heightfield_regions.json.REMOVED.git-id  heightfield_filtered.json.REMOVED.git-id  heightfield_initial.json.REMOVED.git-id
assets/test/dungeon/: compact_heightfield_distance_field.json.REMOVED.git-id  compact_heightfield_eroded.json.REMOVED.git-id  heightfield_filtered.json.REMOVED.git-id  heightfield_initial.json.REMOVED.git-id
crates/avian_rerecast/: Cargo.toml
crates/avian_rerecast/src/: collider_to_trimesh.rs  lib.rs
crates/bevy_rerecast/: Cargo.toml
crates/bevy_rerecast/src/: lib.rs
crates/bevy_rerecast/tests/: cpp_comparison.rs  regression.rs
crates/bevy_rerecast_core/: Cargo.toml
crates/bevy_rerecast_core/src/: asset_loader.rs  backend.rs  debug.rs  generator.rs  lib.rs  mesh.rs
crates/bevy_rerecast_core/src/generator/: mod.rs  mom_can_we_have_weak_handle.rs  upgradable_asset_id.rs
crates/bevy_rerecast_editor/: Cargo.toml
crates/bevy_rerecast_editor/src/: backend.rs  get_navmesh_input.rs  main.rs  save.rs  ui.rs  visualization.rs
crates/bevy_rerecast_editor/src/camera/: camera_controller.rs
crates/bevy_rerecast_editor/src/theme/: widget.rs
crates/bevy_rerecast_editor_integration/: Cargo.toml
crates/bevy_rerecast_editor_integration/src/: brp.rs  lib.rs
crates/bevy_rerecast_editor_integration/src/transmission/: mod.rs  serialization.rs  serialized_mesh.rs  serialized_standard_material.rs
crates/navmesh/tests/reference_data/: compact_heightfield_initial.json.REMOVED.git-id  geometry.json.REMOVED.git-id  heightfield_initial.json.REMOVED.git-id
crates/recast/tests/reference_data/: compact_heightfield_distance_field.json.REMOVED.git-id  compact_heightfield_initial.json.REMOVED.git-id  compact_heightfield_regions.json.REMOVED.git-id
crates/rerecast/: Cargo.toml
crates/rerecast/src/: config.rs  contours.rs  detail_mesh.rs  lib.rs  poly_mesh.rs  rasterize.rs  watershed_build_regions.rs  watershed_distance_field.rs
crates/rerecast/tests/: cpp_comparison.rs
crates/rerecast/tests/reference_data/chainboom/: compact_heightfield_distance_field.json.REMOVED.git-id
crates/rerecast/tests/reference_data/dungeon/: geometry.json.REMOVED.git-id
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
examples/: Cargo.toml
examples/examples/: filtering.rs  from_avian_collider.rs  from_gltf.rs  gltf_scene.rs  primitive_scene.rs  trenchbroom.rs  trenchbroom_scene.rs
media/: demo.mp4.REMOVED.git-id
scenes/gltf/assets/environment_maps/: voortrekker_interior_1k_specular.ktx2.REMOVED.git-id
scenes/gltf/assets/models/: dungeon.bin.REMOVED.git-id  dungeon.glb.REMOVED.git-id
