[package]
name = "rerecast_examples"
description = "TODO"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_rerecast = { version = "0.0.2", path = "../crates/bevy_rerecast" }
avian_rerecast = { version = "0.0.2", path = "../crates/avian_rerecast" }
bevy = { workspace = true, features = ["bevy_remote"] }
bevy_trenchbroom = { workspace = true }
avian3d = { workspace = true }

[lints]
workspace = true
