[package]
name = "rerecast_examples"
description = "TODO"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_rerecast = { workspace = true }
avian_rerecast = { workspace = true }
bevy = { workspace = true, features = ["bevy_remote"] }
bevy_trenchbroom = { workspace = true }
avian3d = { workspace = true }

[lints]
workspace = true
