[package]
name = "avian_rerecast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy_rerecast_core = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
