[package]
name = "avian_rerecast"
description = "Avian backend for bevy_rerecast"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
bevy_math = { workspace = true }
avian3d = { workspace = true, features = ["3d"] }
bevy_rerecast_core = { workspace = true, features = ["std"] }

[features]
default = ["f32"]
f32 = ["avian3d/f32", "avian3d/parry-f32"]
f64 = ["avian3d/f64", "avian3d/parry-f64"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
