[package]
name = "bevy_rerecast"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy_app = { workspace = true }
bevy_math = { workspace = true }
bevy_rerecast_core = { workspace = true }
bevy_rerecast_editor_integration = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true }
test_utils = { workspace = true }

[features]
default = ["bevy_mesh", "editor_integration", "debug_plugin"]
bevy_mesh = ["bevy_rerecast_core/bevy_mesh"]
debug_plugin = [
    "bevy_rerecast_core/debug_plugin",
    "bevy_rerecast_editor_integration?/debug_plugin",
]
editor_integration = ["dep:bevy_rerecast_editor_integration"]

pbr_transmission_textures = [
    "bevy_rerecast_editor_integration?/pbr_transmission_textures",
]
pbr_specular_textures = [
    "bevy_rerecast_editor_integration?/pbr_specular_textures",
]
pbr_multi_layer_material_textures = [
    "bevy_rerecast_editor_integration?/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = [
    "bevy_rerecast_editor_integration?/pbr_anisotropy_texture",
]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
