[package]
name = "bevy_rerecast_editor"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, features = [
    "bevy_remote",
    "configurable_error_handler",
    "wayland",
] }
bevy_rerecast = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
rfd = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
