[package]
name = "bevy_rerecast_editor"
description = "TODO"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
bevy = { workspace = true, features = [
    "bevy_remote",
    "configurable_error_handler",
    "wayland",
] }
bevy_rerecast = { workspace = true, default-features = true }
serde_json = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
ehttp = { workspace = true, features = ["native-async", "json"] }
thiserror = { workspace = true }
bevy_ui_text_input = { workspace = true }
rfd = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
