[package]
name = "rerecast"
description = "Rust port of recastnavigation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
slotmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }
libm = { workspace = true, optional = true }

bevy_reflect = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
test_utils = { workspace = true }

[features]
default = ["std"]
# Use std if available, but fall back to libm if not
nostd-libm = ["dep:libm", "glam/nostd-libm"]
# use libm
libm = ["dep:libm", "glam/libm"]
# use std
std = [
    "glam/std",
    "bevy_reflect?/std",
    "slotmap/std",
    "bitflags/std",
    "tracing/std",
    "anyhow/std",
    "thiserror/std",
]
serialize = ["dep:serde", "glam/serde", "slotmap/serde", "bitflags/serde"]
bevy_reflect = ["dep:bevy_reflect"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
